# epub-translate

./: README.md  non_existent_book_pl.epub  pyproject.toml  test_book.epub  test_book_pl.epub
.github/workflows/: coverage.yml
epub_translate/: cli.py  config.py  main.py  translator.py
tests/: .epub_translate_config  conftest.py  test_config.py  test_example.py  test_translate.py  utils.py
