[tool.poetry]
name = "epub-translate"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/SpaceShaman/epub-translate"
repository = "https://github.com/SpaceShaman/epub-translate"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
ebooklib = "^0.19"
openai = "^1.82.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
